# django-api

./: .env.local  CHANGELOG.md  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  start.sh
.github/workflows/: django-api.yml  release-build.yml  release-please.yml
agenda/: tests.py  views.py
agenda/jukebox/: __init__.py  criteria.py  dataclasses.py  fill_with_jukebox.py  find_schedule_gaps.py  gap_detector.py  gap_filler.py  gap_finder.py  gapfinder.py  jukebox_planner.py  layout.py  picker.py  planner.py  pprint.py  program_picker.py  schedule_repository.py  scoring.py  test_find_schedule_gaps.py  test_gap_finder.py  test_gapfinder.py  test_layout.py  test_picker.py  test_utils.py  utils.py  week_context_builder.py
agenda/jukebox/pprint/: __init__.py
agenda/jukebox/scoring/: __init__.py  cooling_period.py  freshness.py  org_balance.py  protocol.py  test_scorers.py
agenda/management/commands/: fill_weekly_slots.py  (+1 more)
api/: tests.py  urls.py  views.py
api/auth/: serializers.py  views.py
api/organization/: serializers.py
api/schedule/: filters.py  query_set.py  serializers.py  views.py
api/video/: serializers.py  views.py
api/videofile/: schema.py  serializers.py  views.py
chart/: values.yaml
chart/templates/: _helpers.tpl  cronjob-fill-agenda-with-jukebox.yaml  cronjob-fill-next-weeks-agenda.yaml  cronjob-fill-weekly-slots.yaml  cronjob-fill-with-jukebox.yaml  database.yaml  db-migrate.yaml  deployment.yaml  ingress.yaml  initial-data.yaml  memcached.yaml  service.yaml
fk/: models.py  tests.py
fk/fixtures/: frikanalen.json  test.yaml
fk/migrations/: 0016_alter_asrun_in_ms_alter_asrun_out_ms_and_more.py  0017_populate_created_time.py  0018_alter_video_created_time_alter_video_updated_time.py
fk/models/: __init__.py  asrun.py  category.py  ingest.py  organization.py  schedule.py  user.py  video.py  video_file.py
fkweb/: apps.py  signals.py  views.py
fkweb/settings/: base.py  env.py  local.py  production.py
typings/: environ.pyi  portion.pyi
(+6 files in other folders)
