[project]
name = "fkweb"
version = "0.1.2"
description = "Frikanalen's Django-based backend API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dj-database-url==2.3.0",
    "django==5.2",
    "django-cors-headers==4.7.0",
    "django-durationfield==0.5.5",
    "django-environ>=0.12.0",
    "django-filter==25.1",
    "django-model-utils==5.0.0",
    "django-phonenumber-field[phonenumbers]==8.0.0",
    "djangorestframework==3.16.0",
    "djangorestframework-camel-case>=1.4.2",
    "drf-spectacular==0.28.0",
    "drf-standardized-errors[openapi]>=0.15.0",
    "gunicorn==23.0.0",
    "markdown==3.7",
    "mypy>=1.11",
    "psycopg2-binary>=2.9.10",
    "pymemcache>=4.0.0",
    "python-dateutil==2.9.0.post0",
    "requests==2.32.3",
]

[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "mypy>=1.17.1",
]
